--- a/semantic.html
+++ b/semantic.html
@@ -7,18 +7,20 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="header">
+    <header class="header">
       <a href=""></a><a href=""></a><a href=""></a><a href=""></a>
       <h1>Welcome To my site</h1>
+      <h2>enjoy my blog</h2>
       <p>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur
         atque rerum eius laudantium maiores quam cupiditate adipisci? Dolores
         inventore explicabo placeat illum esse expedita accusantium ratione
         dolore perferendis. Repellat, repudiandae.
       </p>
-    </div>
-    <div class="container">
-      <div class="blog">
+    </header>
+    <section class="blogs">
+      <h2>Read My blog</h2>
+      <article class="blog">
         <h3>My Blog-1</h3>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae
@@ -28,8 +30,8 @@
           autem eos earum nobis reprehenderit dicta numquam soluta nam suscipit,
           molestias facilis laudantium.
         </p>
-      </div>
-      <div class="blog">
+      </article>
+      <article class="blog">
         <h3>My Blog-2</h3>
         <p>
           Obcaecati alias eius recusandae, inventore vel saepe harum illo
@@ -39,8 +41,8 @@
           necessitatibus ut adipisci in nam voluptas ipsum, autem, amet aut,
           nostrum minus molestias porro laudantium aspernatur nobis?
         </p>
-      </div>
-      <div class="blog">
+      </article>
+      <article class="blog">
         <h3>My Blog-3</h3>
         <p>
           Corporis accusantium dolorem, praesentium voluptatibus minus, minima
@@ -50,8 +52,8 @@
           repellat officiis maxime at nobis, vitae veritatis. Aliquid sapiente
           voluptatibus autem! Repudiandae ad nam voluptas!
         </p>
-      </div>
-      <div class="blog">
+      </article>
+      <article class="blog">
         <h3>My Blog-4</h3>
         <p>
           Quibusdam, natus doloribus harum quia hic magni nam placeat nulla
@@ -61,7 +63,18 @@
           veritatis autem, consequatur iusto sed deserunt dignissimos in, nulla
           necessitatibus cum est repellat!
         </p>
-      </div>
-    </div>
+      </article>
+    </section>
+    <section>
+      <h3>Photo Album</h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti
+        suscipit inventore, deserunt quaerat laboriosam nesciunt ipsum, adipisci
+        odit temporibus hic accusantium doloremque deleniti magni amet
+        aspernatur dolore repellendus dolor itaque repellat alias aliquam iste.
+        Laboriosam maxime veniam cupiditate optio soluta!
+      </p>
+    </section>
+    <footer><p>Its Funny</p></footer>
   </body>
 </html>
