--- a/semantic.html
+++ b/semantic.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header class="header">
-      <a href=""></a><a href=""></a><a href=""></a><a href=""></a>
+      <nav><a href=""></a><a href=""></a><a href=""></a><a href=""></a></nav>
       <h1>Welcome To my site</h1>
       <h2>enjoy my blog</h2>
       <p>
@@ -18,63 +18,65 @@
         dolore perferendis. Repellat, repudiandae.
       </p>
     </header>
-    <section class="blogs">
-      <h2>Read My blog</h2>
-      <article class="blog">
-        <h3>My Blog-1</h3>
+    <main>
+      <section class="blogs">
+        <h2>Read My blog</h2>
+        <article class="blog">
+          <h3>My Blog-1</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae
+            quae accusantium iusto quis reprehenderit, ratione velit accusamus
+            ipsa consequatur id sapiente vitae facilis. Unde nam placeat cumque
+            reiciendis beatae. Veniam recusandae in quas fuga ipsam iste iure
+            autem eos earum nobis reprehenderit dicta numquam soluta nam
+            suscipit, molestias facilis laudantium.
+          </p>
+        </article>
+        <article class="blog">
+          <h3>My Blog-2</h3>
+          <p>
+            Obcaecati alias eius recusandae, inventore vel saepe harum illo
+            blanditiis repellendus vero eaque. Fugiat impedit earum beatae,
+            ratione tempora quo et cupiditate quidem iste modi atque reiciendis
+            ducimus commodi debitis asperiores! Molestiae accusantium
+            necessitatibus ut adipisci in nam voluptas ipsum, autem, amet aut,
+            nostrum minus molestias porro laudantium aspernatur nobis?
+          </p>
+        </article>
+        <article class="blog">
+          <h3>My Blog-3</h3>
+          <p>
+            Corporis accusantium dolorem, praesentium voluptatibus minus, minima
+            dolores numquam earum at quibusdam, quam sint ab natus voluptatem
+            odit repudiandae iusto animi debitis architecto cum esse officia
+            voluptate dolorum! Facilis corporis tempore, fuga, reprehenderit ex
+            eaque repellat officiis maxime at nobis, vitae veritatis. Aliquid
+            sapiente voluptatibus autem! Repudiandae ad nam voluptas!
+          </p>
+        </article>
+        <article class="blog">
+          <h3>My Blog-4</h3>
+          <p>
+            Quibusdam, natus doloribus harum quia hic magni nam placeat nulla
+            inventore ab aliquam? Quaerat fuga expedita quo tempore sunt amet
+            laborum modi culpa odit dolore consectetur dolorem, quae mollitia
+            facilis nemo, excepturi beatae? Dolor commodi, praesentium
+            laudantium veritatis autem, consequatur iusto sed deserunt
+            dignissimos in, nulla necessitatibus cum est repellat!
+          </p>
+        </article>
+      </section>
+      <section>
+        <h3>Photo Album</h3>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae
-          quae accusantium iusto quis reprehenderit, ratione velit accusamus
-          ipsa consequatur id sapiente vitae facilis. Unde nam placeat cumque
-          reiciendis beatae. Veniam recusandae in quas fuga ipsam iste iure
-          autem eos earum nobis reprehenderit dicta numquam soluta nam suscipit,
-          molestias facilis laudantium.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti
+          suscipit inventore, deserunt quaerat laboriosam nesciunt ipsum,
+          adipisci odit temporibus hic accusantium doloremque deleniti magni
+          amet aspernatur dolore repellendus dolor itaque repellat alias aliquam
+          iste. Laboriosam maxime veniam cupiditate optio soluta!
         </p>
-      </article>
-      <article class="blog">
-        <h3>My Blog-2</h3>
-        <p>
-          Obcaecati alias eius recusandae, inventore vel saepe harum illo
-          blanditiis repellendus vero eaque. Fugiat impedit earum beatae,
-          ratione tempora quo et cupiditate quidem iste modi atque reiciendis
-          ducimus commodi debitis asperiores! Molestiae accusantium
-          necessitatibus ut adipisci in nam voluptas ipsum, autem, amet aut,
-          nostrum minus molestias porro laudantium aspernatur nobis?
-        </p>
-      </article>
-      <article class="blog">
-        <h3>My Blog-3</h3>
-        <p>
-          Corporis accusantium dolorem, praesentium voluptatibus minus, minima
-          dolores numquam earum at quibusdam, quam sint ab natus voluptatem odit
-          repudiandae iusto animi debitis architecto cum esse officia voluptate
-          dolorum! Facilis corporis tempore, fuga, reprehenderit ex eaque
-          repellat officiis maxime at nobis, vitae veritatis. Aliquid sapiente
-          voluptatibus autem! Repudiandae ad nam voluptas!
-        </p>
-      </article>
-      <article class="blog">
-        <h3>My Blog-4</h3>
-        <p>
-          Quibusdam, natus doloribus harum quia hic magni nam placeat nulla
-          inventore ab aliquam? Quaerat fuga expedita quo tempore sunt amet
-          laborum modi culpa odit dolore consectetur dolorem, quae mollitia
-          facilis nemo, excepturi beatae? Dolor commodi, praesentium laudantium
-          veritatis autem, consequatur iusto sed deserunt dignissimos in, nulla
-          necessitatibus cum est repellat!
-        </p>
-      </article>
-    </section>
-    <section>
-      <h3>Photo Album</h3>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti
-        suscipit inventore, deserunt quaerat laboriosam nesciunt ipsum, adipisci
-        odit temporibus hic accusantium doloremque deleniti magni amet
-        aspernatur dolore repellendus dolor itaque repellat alias aliquam iste.
-        Laboriosam maxime veniam cupiditate optio soluta!
-      </p>
-    </section>
+      </section>
+    </main>
     <footer><p>Its Funny</p></footer>
   </body>
 </html>
