--- a/table.html
+++ b/table.html
@@ -5,8 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Table</title>
+    <style>
+      td {
+        border: solid lightgray;
+        padding: 0 10px;
+      }
+      table {
+        border-collapse: collapse;
+      }
+    </style>
   </head>
   <body>
-    <h1>Md Rafiul Islam's table</h1>
+    <table>
+      <tr>
+        <td>1</td>
+        <td>BILL GATES</td>
+        <td>MICROSOFT</td>
+        <td>$1000</td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>STEVE JOBES</td>
+        <td>APPLE</td>
+        <td>$1200</td>
+      </tr>
+      <tr>
+        <td>3</td>
+        <td>LARRY PAGE</td>
+        <td>GOOGLE</td>
+        <td>$1100</td>
+      </tr>
+      <tr>
+        <td>4</td>
+        <td>MARK ZUCKERBERG</td>
+        <td>FACEBOOK</td>
+        <td>$1300</td>
+      </tr>
+    </table>
   </body>
 </html>
