--- a/table.html
+++ b/table.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Table</title>
     <style>
-      td {
+      td,th{
         border: solid lightgray;
         padding: 0 10px;
       }
@@ -17,30 +17,40 @@
   </head>
   <body>
     <table>
-      <tr>
-        <td>1</td>
-        <td>BILL GATES</td>
-        <td>MICROSOFT</td>
-        <td>$1000</td>
-      </tr>
-      <tr>
-        <td>2</td>
-        <td>STEVE JOBES</td>
-        <td>APPLE</td>
-        <td>$1200</td>
-      </tr>
-      <tr>
-        <td>3</td>
-        <td>LARRY PAGE</td>
-        <td>GOOGLE</td>
-        <td>$1100</td>
-      </tr>
-      <tr>
-        <td>4</td>
-        <td>MARK ZUCKERBERG</td>
-        <td>FACEBOOK</td>
-        <td>$1300</td>
-      </tr>
+      <thead>
+        <tr>
+          <th>No.</th>
+          <th>Full name</th>
+          <th>Position</th>
+          <th>Sallary</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>1</td>
+          <td>BILL GATES</td>
+          <td>MICROSOFT</td>
+          <td>$1000</td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>STEVE JOBES</td>
+          <td>APPLE</td>
+          <td>$1200</td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>LARRY PAGE</td>
+          <td>GOOGLE</td>
+          <td>$1100</td>
+        </tr>
+        <tr>
+          <td>4</td>
+          <td>MARK ZUCKERBERG</td>
+          <td>FACEBOOK</td>
+          <td>$1300</td>
+        </tr>
+      </tbody>
     </table>
   </body>
 </html>
