input test last add

--- a/form.html
+++ b/form.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Information Collect Donner</h1>
     <form action="">
-        <input type="text"> plceholder
+        <input type="text" name="" placeholder="Enter Your name " id="">
     </form>
 </body>
 </html>
