--- a/form.html
+++ b/form.html
@@ -1,15 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Information Collect Donner</h1>
     <form action="">
-        <input type="text" name="" placeholder="Enter Your name " id="">
+      <p>
+        Name:
+        <input type="text" name="Name" placeholder="Enter Your name " id="" />
+      </p>
+      <p>
+        Email :
+        <input type="text" name="Email" placeholder="Enter Your email " id="" />
+      </p>
+      <fieldset>
+        <legend>Secect Your group</legend>
+        <p>
+          <label for="A+"> <input type="radio" name="" id="A+" />A+ </label>
+        </p>
+        <p>
+          <label for="A-"> <input type="radio" name="" id="A-" />A- </label>
+        </p>
+        <p>
+          <label for="AB+"> <input type="radio" name="" id="AB+" />AB+ </label>
+        </p>
+        <p>
+          <label for="AB-"> <input type="radio" name="" id="AB-" />AB- </label>
+        </p>
+        <p>
+          <label for="O+"> <input type="radio" name="" id="O+" />O+ </label>
+        </p>
+        <p>
+          <label for="O-"> <input type="radio" name="" id="O-" />O- </label>
+        </p>
+        <p>
+          <label for="B+"> <input type="radio" name="" id="B+" />B+ </label>
+        </p>
+        <p>
+          <label for="B-"> <input type="radio" name="" id="B-" />B- </label>
+        </p>
+      </fieldset>
     </form>
-</body>
+  </body>
 </html>
