--- a/form.html
+++ b/form.html
@@ -18,30 +18,39 @@
         <input type="text" name="Email" placeholder="Enter Your email " id="" />
       </p>
       <fieldset>
-        <legend>Secect Your group</legend>
+        <legend>Select Your group</legend>
         <p>
-          <label for="A+"> <input type="radio" name="" id="A+" />A+ </label>
+          <label for="A+"> <input type="radio" name="Blood" id="A+" />A+ </label>
         </p>
         <p>
-          <label for="A-"> <input type="radio" name="" id="A-" />A- </label>
+          <label for="A-"> <input type="radio" name="Blood" id="A-" />A- </label>
         </p>
         <p>
-          <label for="AB+"> <input type="radio" name="" id="AB+" />AB+ </label>
+          <label for="AB+"> <input type="radio" name="Blood" id="AB+" />AB+ </label>
         </p>
         <p>
-          <label for="AB-"> <input type="radio" name="" id="AB-" />AB- </label>
+          <label for="AB-"> <input type="radio" name="Blood" id="AB-" />AB- </label>
         </p>
         <p>
-          <label for="O+"> <input type="radio" name="" id="O+" />O+ </label>
+          <label for="O+"> <input type="radio" name="Blood" id="O+" />O+ </label>
         </p>
         <p>
-          <label for="O-"> <input type="radio" name="" id="O-" />O- </label>
+          <label for="O-"> <input type="radio" name="Blood" id="O-" />O- </label>
         </p>
         <p>
-          <label for="B+"> <input type="radio" name="" id="B+" />B+ </label>
+          <label for="B+"> <input type="radio" name="Blood" id="B+" />B+ </label>
         </p>
         <p>
-          <label for="B-"> <input type="radio" name="" id="B-" />B- </label>
+          <label for="B-"> <input type="radio" name="Blood" id="B-" />B- </label>
+        </p>
+      </fieldset>
+      <fieldset>
+        <legend>Select your Type</legend>
+        <p><label for=""><input type="checkbox" name="" id="">
+        </label>
+        </p>
+        <p><label for=""><input type="checkbox" name="" id="">
+        </label>
         </p>
       </fieldset>
     </form>
