--- a/form.html
+++ b/form.html
@@ -14,45 +14,73 @@
         <input type="text" name="Name" placeholder="Enter Your name " id="" />
       </p>
       <p>
-        Email :
-        <input type="text" name="Email" placeholder="Enter Your email " id="" />
+        Phone :
+        <input
+          type="text"
+          name="Email"
+          placeholder="Enter Your Phone Number "
+          id=""
+        />
       </p>
       <fieldset>
         <legend>Select Your group</legend>
         <p>
-          <label for="A+"> <input type="radio" name="Blood" id="A+" />A+ </label>
+          <label for="A+">
+            <input type="radio" name="Blood" id="A+" />A+
+          </label>
         </p>
         <p>
-          <label for="A-"> <input type="radio" name="Blood" id="A-" />A- </label>
+          <label for="A-">
+            <input type="radio" name="Blood" id="A-" />A-
+          </label>
         </p>
         <p>
-          <label for="AB+"> <input type="radio" name="Blood" id="AB+" />AB+ </label>
+          <label for="AB+">
+            <input type="radio" name="Blood" id="AB+" />AB+
+          </label>
         </p>
         <p>
-          <label for="AB-"> <input type="radio" name="Blood" id="AB-" />AB- </label>
+          <label for="AB-">
+            <input type="radio" name="Blood" id="AB-" />AB-
+          </label>
         </p>
         <p>
-          <label for="O+"> <input type="radio" name="Blood" id="O+" />O+ </label>
+          <label for="O+">
+            <input type="radio" name="Blood" id="O+" />O+
+          </label>
         </p>
         <p>
-          <label for="O-"> <input type="radio" name="Blood" id="O-" />O- </label>
+          <label for="O-">
+            <input type="radio" name="Blood" id="O-" />O-
+          </label>
         </p>
         <p>
-          <label for="B+"> <input type="radio" name="Blood" id="B+" />B+ </label>
+          <label for="B+">
+            <input type="radio" name="Blood" id="B+" />B+
+          </label>
         </p>
         <p>
-          <label for="B-"> <input type="radio" name="Blood" id="B-" />B- </label>
+          <label for="B-">
+            <input type="radio" name="Blood" id="B-" />B-
+          </label>
         </p>
       </fieldset>
       <fieldset>
         <legend>Select your Type</legend>
-        <p><label for=""><input type="checkbox" name="" id="">
-        </label>
+        <p>
+          <label for="Collect"
+            ><input type="checkbox" name="Blood" id="Collect" /> </label
+          >Collect
         </p>
-        <p><label for=""><input type="checkbox" name="" id="">
-        </label>
+        <p>
+          <label for="Donnet"
+            ><input type="checkbox" name="Blood" id="Donnet" /> </label
+          >Donnet
         </p>
       </fieldset>
+      <p>Special instruction</p>
+      <textarea name="Instruction" id="" cols="30" rows="10"></textarea>
+      <button type="submit">Submit</button>
     </form>
   </body>
 </html>
