reset button add

--- a/form.html
+++ b/form.html
@@ -81,6 +81,7 @@
       <p>Special instruction</p>
       <textarea name="Instruction" id="" cols="30" rows="10"></textarea>
       <button type="submit">Submit</button>
+      <button type="reset">Reset</button>
     </form>
   </body>
 </html>
