--- a/form.html
+++ b/form.html
@@ -14,6 +14,15 @@
         <input type="text" name="Name" placeholder="Enter Your name " id="" />
       </p>
       <p>
+        Hospital:
+        <input
+          type="text"
+          name="Name"
+          placeholder="Enter Your Hospital "
+          id=""
+        />
+      </p>
+      <p>
         Phone :
         <input
           type="text"
