--- a/home.html
+++ b/home.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home Html</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <a href="form.html">Form</a>
-        <a href="table.html">Table</a>
-        <a href="semantic.html">Semantic</a>
-        <h1>Welcome to my home site</h1>
+      <nav>
+        <ul>
+          <li><a href="home.html">Home</a></li>
+          <li><a href="form.html">Form</a></li>
+          <li><a href="table.html">Table</a></li>
+          <li><a href="semantic.html">Semantic</a></li>
+          <li><a href="">About Us</a></li>
+        </ul>
+      </nav>
+      <h1>Welcome to my home site</h1>
     </header>
-</body>
+  </body>
 </html>
