--- a/semantic.html
+++ b/semantic.html
@@ -5,8 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style/nav.css" />
   </head>
   <body>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="home.html">Home</a></li>
+          <li><a href="form.html">Form</a></li>
+          <li><a href="table.html">Table</a></li>
+          <li><a href="semantic.html">Semantic</a></li>
+          <li><a href="">About Us</a></li>
+        </ul>
+      </nav>
+      <h1>Welcome to Semantic</h1>
+    </header>
     <header class="header">
       <nav><a href=""></a><a href=""></a><a href=""></a><a href=""></a></nav>
       <h1>Welcome To my site</h1>
