--- a/table.html
+++ b/table.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Table</title>
+    <link rel="stylesheet" href="style/nav.css" />
     <style>
-      td,th{
+      td,
+      th {
         border: solid lightgray;
         padding: 0 10px;
       }
@@ -16,6 +18,18 @@
     </style>
   </head>
   <body>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="home.html">Home</a></li>
+          <li><a href="form.html">Form</a></li>
+          <li><a href="table.html">Table</a></li>
+          <li><a href="semantic.html">Semantic</a></li>
+          <li><a href="">About Us</a></li>
+        </ul>
+      </nav>
+      <h1>Welcome to My Table</h1>
+    </header>
     <table>
       <thead>
         <tr>
