--- a/home.html
+++ b/home.html
@@ -14,7 +14,17 @@
           <li><a href="home.html">Home</a></li>
           <li><a href="form.html">Form</a></li>
           <li><a href="table.html">Table</a></li>
-          <li><a href="semantic.html">Semantic</a></li>
+          <li>
+            <a href="semantic.html"
+              >Semantic
+              <ul class="dropdown">
+                <li><a href="">link-1</a></li>
+                <li><a href="">link-2</a></li>
+                <li><a href="">link-3</a></li>
+                <li><a href="">link-4</a></li>
+              </ul>
+            </a>
+          </li>
           <li><a href="">About Us</a></li>
         </ul>
       </nav>
