--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
           <li><a href="">About Us</a></li>
         </ul>
       </nav>
-      <h1>Welcome to my home site</h1>
+      <h1>Welcome to my home site views</h1>
     </header>
   </body>
 </html>
